<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">rpassword</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="action_backup">Backup</string>
    <string name="title_activity_password_card">PasswordCardActivity</string>
    <string name="form_hint_input_admin">Please input your root password</string>
    <string name="title_activity_root_auth">RootAuthActivity</string>
    <string name="title_activity_card_update">CardUpdateActivity</string>
    <string name="title_activity_card_delete">CardDeleteActivity</string>
    <string name="title_activity_card_add">CardAddActivity</string>
    <string name="form_email">Email</string>
    <string name="form_password">Password</string>
    <string name="form_password_again">Password again</string>
    <string name="button_sign_in">Sign in</string>
    <string name="button_sign_up">Sign up</string>
    <string name="button_card_add">Add an account</string>
    <string name="button_card_edit">Edit</string>
    <string name="button_card_query">Query</string>
    <string name="button_card_delete">Delete</string>
    <string name="title_activity_card_edit">CardEditActivity</string>
    <string name="title_activity_card_query">CardQueryActivity</string>
    <string name="add_account">account name</string>
    <string name="account_username">account username</string>
    <string name="ok">Summit</string>
    <string name="cancel">Cancel</string>
    <string name="action_sign_in">signin</string>
    <string name="action_sign_up">signup</string>
    <string name="root">Root Password</string>

    <string name="match_error">password not match</string>
    <string name="card_query">query password</string>
    <string name="delete_warning">Sure to delete this account</string>
    <string name="fail_register">Register Failed</string>
    <string name="success_register">Register Success</string>
    <string name="fail_login">Login failed</string>
    <string name="success_login">Login Success</string>
    <string name="clip">clip to clipboard</string>
    <string name="success_modify">update success</string>
    <string name="fail_modify">update failed</string>
    <string name="success_delete">delete success</string>
    <string name="success_auth">root right</string>
    <string name="fail_auth">wrong root</string>
    <string name="success_add">add success</string>
    <string name="fail_add">add failed</string>
    <string name="action_restore">Restore from cloud</string>
    <string name="action_about">About</string>
    <string name="action_logout">Logout</string>
</resources>

