<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <EditText
        android:id="@+id/card_add_account"
        android:hint="@string/add_account"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:textSize="40px"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/card_add_username"
        android:hint="@string/account_username"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="text"
        android:textSize="40px"
        android:gravity="center"
        />
    <EditText
        android:id="@+id/card_add_password"
        android:hint="@string/form_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:inputType="textPassword"
        android:imeActionId="@+id/card_add_ime"
        android:textSize="40px"
        android:gravity="center"
        />

</LinearLayout>
