<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.skyler.rpassword.ui.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/register_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:visibility="gone" />


    <LinearLayout
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/register_email"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/form_email"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="35px"
            />

        <EditText
            android:id="@+id/register_password"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/form_password"
            android:imeActionId="@+id/login"
            android:imeActionLabel="@string/action_sign_up"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="35px"

            />

        <EditText
            android:id="@+id/register_admin"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:hint="@string/root"
            android:imeActionId="@+id/register"
            android:imeActionLabel="@string/action_sign_up"
            android:imeOptions="actionUnspecified"
            android:inputType="textPassword"
            android:maxLines="1"
            android:singleLine="true"
            android:textSize="35px"

            />

        <Button
            android:id="@+id/register_sign_up"
            style="?android:textAppearanceSmall"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/button_sign_up"
            android:textStyle="bold"
            android:background="#66cc99"
            android:textColor="#ffffff"
            android:textSize="40px"
            />

    </LinearLayout>

</LinearLayout>



